further analysing failure cases

--- a/experiments/exp10_result_analysis.ipynb
+++ b/experiments/exp10_result_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,12 +109,28 @@
     "            num_correct += 1\n",
     "        else:\n",
     "            incorrect_idx.append(i)\n",
-    "    return num_correct/len(data), incorrect_idx"
+    "    return num_correct/len(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_acc_without_unsures(data, annotations):\n",
+    "    num_correct, num_unsures = 0,0\n",
+    "    for i in range(len(data)):\n",
+    "        if data[i]['falsified'] == 'Unsure':\n",
+    "            num_unsures += 1\n",
+    "        elif bool(data[i]['falsified']) == annotations[i]['falsified']:\n",
+    "            num_correct += 1\n",
+    "    return num_correct/(len(data) - num_unsures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +203,8 @@
       "Num unsures:  675\n",
       "Accuracy: 0.5720\n",
       "Precision: 0.5448\n",
-      "Recall: 0.8640\n"
+      "Recall: 0.8640\n",
+      "Accuracy without unsures: 0.7515\n"
      ]
     }
    ],
@@ -200,7 +217,8 @@
     "precision, recall = get_precision_and_recall(result_data, test_data_annotations)\n",
     "print(\"Accuracy: {:.4f}\".format(get_accuracy(result_data, test_data_annotations)))\n",
     "print(\"Precision: {:.4f}\".format(precision))\n",
-    "print(\"Recall: {:.4f}\".format(recall))\n"
+    "print(\"Recall: {:.4f}\".format(recall))\n",
+    "print(\"Accuracy without unsures: {:.4f}\".format(get_acc_without_unsures(result_data, test_data_annotations)))\n"
    ]
   },
   {
@@ -212,29 +230,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Num disagreements:  10\n",
-      "Num unsures:  202\n",
-      "Accuracy: 0.5983\n",
-      "Precision: 0.5826\n",
-      "Recall: 0.6933\n"
+      "Num disagreements:  16\n",
+      "Num unsures:  329\n",
+      "Accuracy: 0.5960\n",
+      "Precision: 0.5804\n",
+      "Recall: 0.6860\n",
+      "Accuracy without unsures: 0.6433\n"
      ]
     }
    ],
    "source": [
-    "web_access_file = \"../results/final_result.json\"\n",
+    "web_access_file = \"../results/final_results.json\"\n",
     "result_data2 = get_results(web_access_file)\n",
     "num_disagreements(result_data2)\n",
     "precision, recall = get_precision_and_recall(result_data2, test_data_annotations)\n",
     "print(\"Accuracy: {:.4f}\".format(get_accuracy(result_data2, test_data_annotations)))\n",
     "print(\"Precision: {:.4f}\".format(precision))\n",
-    "print(\"Recall: {:.4f}\".format(recall))"
+    "print(\"Recall: {:.4f}\".format(recall))\n",
+    "print(\"Accuracy without unsures: {:.4f}\".format(get_acc_without_unsures(result_data2, test_data_annotations)))"
    ]
   },
   {
@@ -246,12 +266,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "from PIL import Image\n",
-    "from utils.data import get_data, show_data\n",
+    "from utils.data import get_data, show_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def failed_samples(incorrect_idx, res_data):\n",
     "    for i in incorrect_idx:\n",
@@ -277,10 +305,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def retrieve_summary(key):\n",
+    "    with open(\"../scripts/final_summaries.json\", \"r\") as f:\n",
+    "        data = json.load(f)\n",
+    "    return data[key]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(len(result_data2)):\n",
+    "    dp = result_data2[i]\n",
+    "    key = str(dp['id'])+\"_\"+str(dp['image_id'])\n",
+    "    summ = retrieve_summary(key)\n",
+    "    img, caption, _, _ = get_data(i)\n",
+    "    display(img)\n",
+    "    show_data(i)\n",
+    "    print(\"Model prediction: \", dp['falsified'])\n",
+    "    print(\"Summary: \", summ)\n",
+    "    cont = input()\n",
+    "    if \"exit\" == cont:\n",
+    "        break"
+   ]
   }
  ],
  "metadata": {
