result analysis for with context experiment

--- a/experiments/exp10_result_analysis.ipynb
+++ b/experiments/exp10_result_analysis.ipynb
@@ -38,7 +38,8 @@
     "\n",
     "    test_data = json.load(open(\"../../news_clippings/news_clippings/data/merged_balanced/test.json\"))\n",
     "    annotations = test_data[\"annotations\"]\n",
-    "    return annotations"
+    "    return annotations\n",
+    "test_data_annotations = get_test_data_annotations()"
    ]
   },
   {
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +115,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_incorrect_idx(data, annotations):\n",
+    "    num_correct = 0\n",
+    "    data = fix_unsures(data)\n",
+    "    incorrect_idx = []\n",
+    "    for i in range(len(data)):\n",
+    "        if bool(data[i]['falsified']) != annotations[i]['falsified']:\n",
+    "            incorrect_idx.append(i)\n",
+    "    return incorrect_idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -209,11 +226,10 @@
     }
    ],
    "source": [
-    "no_web_file = \"../scripts/results3_no_web_access_less_unsure.json\"\n",
+    "no_web_file = \"../results/results_no_web_access.json\"\n",
     "result_data = get_results(no_web_file)\n",
     "result_data = result_data[:1000]\n",
     "num_disagreements(result_data)\n",
-    "test_data_annotations = get_test_data_annotations()\n",
     "precision, recall = get_precision_and_recall(result_data, test_data_annotations)\n",
     "print(\"Accuracy: {:.4f}\".format(get_accuracy(result_data, test_data_annotations)))\n",
     "print(\"Precision: {:.4f}\".format(precision))\n",
@@ -225,12 +241,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### with web access"
+    "### with web access (only when model unsure)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +263,7 @@
     }
    ],
    "source": [
-    "web_access_file = \"../results/final_results.json\"\n",
+    "web_access_file = \"../results/results_web_access_no_initial_context.json\"\n",
     "result_data2 = get_results(web_access_file)\n",
     "num_disagreements(result_data2)\n",
     "precision, recall = get_precision_and_recall(result_data2, test_data_annotations)\n",
@@ -255,6 +271,35 @@
     "print(\"Precision: {:.4f}\".format(precision))\n",
     "print(\"Recall: {:.4f}\".format(recall))\n",
     "print(\"Accuracy without unsures: {:.4f}\".format(get_acc_without_unsures(result_data2, test_data_annotations)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num disagreements:  7\n",
+      "Num unsures:  9\n",
+      "Accuracy: 0.8580\n",
+      "Precision: 0.8266\n",
+      "Recall: 0.9060\n",
+      "Accuracy without unsures: 0.8587\n"
+     ]
+    }
+   ],
+   "source": [
+    "web_access_file = \"../results/results_initial_context.json\"\n",
+    "result_data3 = get_results(web_access_file)\n",
+    "num_disagreements(result_data3)\n",
+    "precision, recall = get_precision_and_recall(result_data3, test_data_annotations)\n",
+    "print(\"Accuracy: {:.4f}\".format(get_accuracy(result_data3, test_data_annotations)))\n",
+    "print(\"Precision: {:.4f}\".format(precision))\n",
+    "print(\"Recall: {:.4f}\".format(recall))\n",
+    "print(\"Accuracy without unsures: {:.4f}\".format(get_acc_without_unsures(result_data3, test_data_annotations)))"
    ]
   },
   {
@@ -266,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,36 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def failed_samples(incorrect_idx, res_data):\n",
-    "    for i in incorrect_idx:\n",
-    "        img, caption, _, _ = get_data(i)\n",
-    "        display(img)\n",
-    "        show_data(i)\n",
-    "        print(\"Model_prediction: \", res_data[i]['falsified'])\n",
-    "        print(\"Model arguments: \", res_data[i]['output'])\n",
-    "        cont = input()\n",
-    "        if \"exit\" == cont:\n",
-    "            break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_, incorrect_idx = get_accuracy(result_data2, test_data_annotations)\n",
-    "failed_samples(incorrect_idx, result_data2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,22 +333,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(len(result_data2)):\n",
-    "    dp = result_data2[i]\n",
-    "    key = str(dp['id'])+\"_\"+str(dp['image_id'])\n",
-    "    summ = retrieve_summary(key)\n",
-    "    img, caption, _, _ = get_data(i)\n",
-    "    display(img)\n",
-    "    show_data(i)\n",
-    "    print(\"Model prediction: \", dp['falsified'])\n",
-    "    print(\"Summary: \", summ)\n",
-    "    cont = input()\n",
-    "    if \"exit\" == cont:\n",
-    "        break"
+    "def failed_samples(incorrect_idx, res_data):\n",
+    "    for i in incorrect_idx:\n",
+    "        img, caption, _, annotation = get_data(i)\n",
+    "        display(img)\n",
+    "        show_data(i)\n",
+    "        key = str(annotation['id'])+\"_\"+str(annotation['image_id'])\n",
+    "        print(\"Associated summary: \", retrieve_summary(key))\n",
+    "        print(\"Model_prediction: \", res_data[i]['falsified'])\n",
+    "        print(\"Model arguments: \", res_data[i]['output'])\n",
+    "        cont = input()\n",
+    "        if \"exit\" == cont:\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num unsures:  8\n",
+      "[3, 4, 14, 17, 19, 31, 36, 38, 44, 47, 53, 62, 64, 67, 74, 76, 78, 85, 88, 110, 112, 113, 116, 117, 120, 132, 141, 146, 149, 150, 152, 154, 164, 167, 170, 172, 174, 175, 183, 190, 199, 201, 203, 205, 207, 216, 218, 223, 224, 226, 229, 234, 235, 237, 241, 242, 245, 253, 254, 256, 260, 267, 272, 274, 278, 286, 295, 296, 304, 305, 312, 316, 321, 322, 324, 332, 338, 339, 341, 342, 343, 344, 348, 352, 354, 367, 369, 371, 376, 384, 394, 398, 400, 404, 405, 414, 415, 418, 424, 425, 426, 427, 428, 432, 438, 451, 453, 454, 455, 456, 464, 466, 470, 480, 481, 484, 488, 493, 496, 502, 503, 505, 510, 513, 517, 518, 528, 529, 531, 532, 533, 535, 540, 541, 551, 556, 559, 566, 568, 580, 582, 593, 596, 600, 602, 608, 613, 614, 623, 626, 628, 636, 638, 640, 644, 651, 657, 661, 669, 672, 678, 689, 694, 698, 700, 708, 710, 712, 716, 719, 722, 724, 726, 728, 732, 736, 738, 740, 757, 759, 762, 763, 768, 772, 774, 784, 786, 787, 788, 790, 794, 811, 814, 819, 823, 824, 826, 827, 833, 835, 843, 847, 853, 856, 859, 874, 879, 883, 887, 888, 890, 891, 895, 896, 897, 914, 918, 926, 927, 930, 942, 944, 951, 954, 957, 962, 971, 972, 988, 995]\n"
+     ]
+    }
+   ],
+   "source": [
+    "incorrect_idx = get_incorrect_idx(result_data3, test_data_annotations)\n",
+    "print(incorrect_idx)\n",
+    "#failed_samples(incorrect_idx, result_data3)"
    ]
   }
  ],
