update for disambiguation query generation experiments

--- a/experiments/exp10_result_analysis.ipynb
+++ b/experiments/exp10_result_analysis.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -306,12 +306,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### with disambiguation queries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num disagreements:  0\n",
+      "Num unsures:  2\n",
+      "Accuracy: 0.7767\n",
+      "Precision: 0.7456\n",
+      "Recall: 0.8400\n",
+      "Accuracy without unsures: 0.7819\n"
+     ]
+    }
+   ],
+   "source": [
+    "web_access_file = \"../results/res_with_dismab.json\"\n",
+    "result_data4 = get_results(web_access_file)\n",
+    "num_disagreements(result_data4)\n",
+    "precision, recall = get_precision_and_recall(result_data4, test_data_annotations)\n",
+    "print(\"Accuracy: {:.4f}\".format(get_accuracy(result_data4, test_data_annotations)))\n",
+    "print(\"Precision: {:.4f}\".format(precision))\n",
+    "print(\"Recall: {:.4f}\".format(recall))\n",
+    "print(\"Accuracy without unsures: {:.4f}\".format(get_acc_without_unsures(result_data4, test_data_annotations)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Analysing where model fails (what kinds of examples the model fails on)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,19 +357,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def retrieve_summary(key):\n",
-    "    with open(\"../scripts/final_summaries.json\", \"r\") as f:\n",
+    "    with open(\"../utils/summaries.json\", \"r\") as f:\n",
     "        data = json.load(f)\n",
     "    return data[key]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,23 +389,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Num unsures:  8\n",
-      "[3, 4, 14, 17, 19, 31, 36, 38, 44, 47, 53, 62, 64, 67, 74, 76, 78, 85, 88, 110, 112, 113, 116, 117, 120, 132, 141, 146, 149, 150, 152, 154, 164, 167, 170, 172, 174, 175, 183, 190, 199, 201, 203, 205, 207, 216, 218, 223, 224, 226, 229, 234, 235, 237, 241, 242, 245, 253, 254, 256, 260, 267, 272, 274, 278, 286, 295, 296, 304, 305, 312, 316, 321, 322, 324, 332, 338, 339, 341, 342, 343, 344, 348, 352, 354, 367, 369, 371, 376, 384, 394, 398, 400, 404, 405, 414, 415, 418, 424, 425, 426, 427, 428, 432, 438, 451, 453, 454, 455, 456, 464, 466, 470, 480, 481, 484, 488, 493, 496, 502, 503, 505, 510, 513, 517, 518, 528, 529, 531, 532, 533, 535, 540, 541, 551, 556, 559, 566, 568, 580, 582, 593, 596, 600, 602, 608, 613, 614, 623, 626, 628, 636, 638, 640, 644, 651, 657, 661, 669, 672, 678, 689, 694, 698, 700, 708, 710, 712, 716, 719, 722, 724, 726, 728, 732, 736, 738, 740, 757, 759, 762, 763, 768, 772, 774, 784, 786, 787, 788, 790, 794, 811, 814, 819, 823, 824, 826, 827, 833, 835, 843, 847, 853, 856, 859, 874, 879, 883, 887, 888, 890, 891, 895, 896, 897, 914, 918, 926, 927, 930, 942, 944, 951, 954, 957, 962, 971, 972, 988, 995]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "\n",
     "incorrect_idx = get_incorrect_idx(result_data3, test_data_annotations)\n",
-    "print(incorrect_idx)\n",
-    "#failed_samples(incorrect_idx, result_data3)"
+    "#print(incorrect_idx)\n",
+    "failed_samples(incorrect_idx, result_data3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
