result analysis for disambiguation query experiments

--- a/experiments/exp10_result_analysis.ipynb
+++ b/experiments/exp10_result_analysis.ipynb
@@ -347,14 +347,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "731\n",
       "Num disagreements:  14\n",
       "Num unsures:  38\n",
       "Accuracy: 0.5144\n",
@@ -377,13 +376,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "253\n",
       "Num disagreements:  1\n",
       "Num unsures:  6\n",
       "Accuracy: 0.7352\n",
@@ -396,6 +396,7 @@
    "source": [
     "web_access_file = \"../scripts/disamb_res_updated_1.json\"\n",
     "result_data5 = get_results(web_access_file)\n",
+    "print(len(result_data5))\n",
     "num_disagreements(result_data5)\n",
     "precision, recall = get_precision_and_recall(result_data5, test_data_annotations)\n",
     "print(\"Accuracy: {:.4f}\".format(get_accuracy(result_data5, test_data_annotations)))\n",
@@ -413,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,13 +456,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num unsures:  6\n",
+      "[2, 12, 17, 20, 22, 23, 31, 36, 38, 39, 44, 49, 52, 60, 67, 74, 75, 76, 78, 80, 81, 88, 101, 110, 113, 114, 116, 117, 118, 120, 123, 126, 130, 132, 135, 140, 142, 146, 149, 150, 152, 155, 158, 164, 167, 170, 172, 173, 183, 184, 190, 195, 199, 201, 203, 206, 218, 219, 224, 228, 229, 235, 237, 238, 241, 242, 245]\n"
+     ]
+    }
+   ],
    "source": [
     "incorrect_idx = get_incorrect_idx(result_data5, test_data_annotations)\n",
-    "#print(incorrect_idx)\n",
-    "failed_samples(incorrect_idx, result_data5)"
+    "print(incorrect_idx)\n",
+    "#failed_samples(incorrect_idx, result_data5)"
    ]
   },
   {
@@ -488,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
