result analysis for finetuned experiments

--- a/experiments/exp10_result_analysis.ipynb
+++ b/experiments/exp10_result_analysis.ipynb
@@ -39,7 +39,8 @@
     "    test_data = json.load(open(\"../../news_clippings/news_clippings/data/merged_balanced/test.json\"))\n",
     "    annotations = test_data[\"annotations\"]\n",
     "    return annotations\n",
-    "test_data_annotations = get_test_data_annotations()"
+    "test_data_annotations = get_test_data_annotations()\n",
+    "test_data_annotations = test_data_annotations[:1000]"
    ]
   },
   {
@@ -57,14 +58,14 @@
     "        if data[i]['falsified'] == \"Unsure\":\n",
     "            num_unsures += 1\n",
     "            if data[i]['output']['model_0'] == \"\" and data[i]['output']['model_1'] != \"\":\n",
-    "                if \"YES\" in data[i]['output']['model_1']:\n",
+    "                if \"YES\" in data[i]['output']['model_1'] or \"Yes\" in data[i]['output']['model_1']:\n",
     "                    data[i]['falsified'] = True\n",
-    "                elif \"NO\" in data[i]['output']['model_1']:\n",
+    "                elif \"NO\" in data[i]['output']['model_1'] or \"No\" in data[i]['output']['model_1']:\n",
     "                    data[i]['falsified'] = False\n",
     "            elif data[i]['output']['model_0'] != \"\" and data[i]['output']['model_1'] == \"\":\n",
-    "                if \"YES\" in data[i]['output']['model_0']:\n",
+    "                if \"YES\" in data[i]['output']['model_0'] or \"Yes\" in data[i]['output']['model_0']:\n",
     "                    data[i]['falsified'] = True\n",
-    "                elif \"NO\" in data[i]['output']['model_0']:\n",
+    "                elif \"NO\" in data[i]['output']['model_0'] or \"No\" in data[i]['output']['model_0']:\n",
     "                    data[i]['falsified'] = False\n",
     "    print(\"Num unsures: \", num_unsures)\n",
     "    return data"
@@ -86,11 +87,11 @@
     "        m1 = data[i]['output']['model_1']\n",
     "        if data[i]['falsified'] == \"Unsure\":\n",
     "            #check if models disagree\n",
-    "            if \"YES\" in m0 and (\"NO\" in m1 or \"UNSURE\" in m1):\n",
+    "            if (\"YES\" in m0 or \"Yes\" in m0) and (\"NO\" in m1 or \"No\" in m1 or \"Unsure\" in m1):\n",
     "                disagreements += 1\n",
-    "            elif \"NO\" in m0 and (\"YES\" in m1 or \"UNSURE\" in m1):\n",
+    "            elif (\"NO\" in m0 or \"No\" in m0) and (\"YES\" in m1 or \"Yes\" in m1 or \"Unsure\" in m1):\n",
     "                disagreements += 1\n",
-    "            elif \"UNSURE\" in m0 and (\"YES\" in m1 or \"NO\" in m1):\n",
+    "            elif \"Unsure\" in m0 and (\"YES\" in m1 or \"NO\" in m1 or \"Yes\" in m1 or \"No\" in m1):\n",
     "                disagreements += 1\n",
     "    print(\"Num disagreements: \", disagreements)"
    ]
@@ -110,6 +111,7 @@
     "            num_correct += 1\n",
     "        else:\n",
     "            incorrect_idx.append(i)\n",
+    "    print(\"Num incorrects: \", len(incorrect_idx))\n",
     "    return num_correct/len(data)"
    ]
   },
@@ -209,15 +211,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Num disagreements:  8\n",
+      "Num disagreements:  4\n",
       "Num unsures:  675\n",
+      "Num incorrects:  428\n",
       "Accuracy: 0.5720\n",
       "Precision: 0.5448\n",
       "Recall: 0.8640\n",
@@ -246,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -347,22 +350,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Num disagreements:  14\n",
-      "Num unsures:  38\n",
-      "Accuracy: 0.5144\n",
-      "Precision: 0.5106\n",
-      "Recall: 0.6603\n",
-      "Accuracy without unsures: 0.5152\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "web_access_file = \"../scripts/temp_final_disamb.json\"\n",
     "result_data5 = get_results(web_access_file)\n",
@@ -409,12 +399,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### actor-skeptic setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n",
+      "Precision: 0.8166\n",
+      "Recall: 0.8640\n",
+      "Accuracy without unsures: 0.8398\n"
+     ]
+    }
+   ],
+   "source": [
+    "web_access_file = \"../results/as_temp.json\"\n",
+    "result_data6 = get_results(web_access_file)\n",
+    "print(len(result_data6))\n",
+    "#num_disagreements(result_data6)\n",
+    "precision, recall = get_precision_and_recall(result_data6, test_data_annotations)\n",
+    "#print(\"Accuracy: {:.4f}\".format(get_accuracy(result_data6, test_data_annotations)))\n",
+    "print(\"Precision: {:.4f}\".format(precision))\n",
+    "print(\"Recall: {:.4f}\".format(recall))\n",
+    "print(\"Accuracy without unsures: {:.4f}\".format(get_acc_without_unsures(result_data6, test_data_annotations)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Finetuned model results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n",
+      "Num disagreements:  8\n",
+      "Num unsures:  25\n",
+      "Num incorrects:  182\n",
+      "Accuracy: 0.8180\n",
+      "Precision: 0.7449\n",
+      "Recall: 0.9580\n",
+      "Accuracy without unsures: 0.8192\n"
+     ]
+    }
+   ],
+   "source": [
+    "web_access_file = \"../results/finetuned_results.json\"\n",
+    "result_data7 = get_results(web_access_file)\n",
+    "print(len(result_data7))\n",
+    "num_disagreements(result_data7)\n",
+    "precision, recall = get_precision_and_recall(result_data7, test_data_annotations)\n",
+    "print(\"Accuracy: {:.4f}\".format(get_accuracy(result_data7, test_data_annotations)))\n",
+    "print(\"Precision: {:.4f}\".format(precision))\n",
+    "print(\"Recall: {:.4f}\".format(recall))\n",
+    "print(\"Accuracy without unsures: {:.4f}\".format(get_acc_without_unsures(result_data7, test_data_annotations)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Analysing where model fails (what kinds of examples the model fails on)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,22 +520,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Num unsures:  6\n",
-      "[2, 12, 17, 20, 22, 23, 31, 36, 38, 39, 44, 49, 52, 60, 67, 74, 75, 76, 78, 80, 81, 88, 101, 110, 113, 114, 116, 117, 118, 120, 123, 126, 130, 132, 135, 140, 142, 146, 149, 150, 152, 155, 158, 164, 167, 170, 172, 173, 183, 184, 190, 195, 199, 201, 203, 206, 218, 219, 224, 228, 229, 235, 237, 238, 241, 242, 245]\n"
+      "Num unsures:  39\n",
+      "[2, 14, 20, 23, 31, 36, 44, 54, 62, 64, 74, 76, 78, 80, 86, 98, 110, 112, 114, 116, 117, 118, 120, 130, 136, 140, 142, 150, 152, 154, 158, 160, 164, 166, 167, 168, 170, 174, 175, 183, 184, 189, 190, 199, 205, 206, 218, 224, 229, 234, 235, 241, 242, 244, 245, 246, 254, 260, 267, 272, 274, 284, 286, 294, 296, 300, 304, 308, 316, 322, 324, 330, 334, 335, 338, 341, 342, 343, 348, 354, 360, 361, 362, 366, 371, 372, 375, 376, 380, 382, 384, 386, 398, 404, 408, 410, 412, 416, 418, 425, 426, 428, 432, 436, 438, 456, 464, 466, 470, 473, 480, 481, 490, 498, 502, 516, 520, 524, 528, 530, 532, 534, 535, 543, 552, 554, 556, 562, 566, 568, 574, 580, 582, 586, 590, 596, 600, 602, 608, 613, 614, 623, 626, 628, 636, 638, 640, 642, 644, 648, 650, 651, 652, 656, 666, 672, 676, 678, 684, 688, 693, 698, 700, 710, 712, 720, 721, 722, 724, 726, 728, 732, 734, 736, 738, 740, 744, 760, 762, 768, 771, 772, 774, 778, 786, 790, 794, 798, 802, 806, 810, 814, 816, 822, 824, 826, 833, 835, 836, 838, 842, 847, 854, 856, 858, 860, 872, 874, 884, 888, 890, 895, 896, 897, 900, 904, 914, 920, 922, 926, 928, 930, 932, 938, 940, 941, 942, 944, 951, 952, 954, 962, 972, 974, 978, 995]\n"
      ]
     }
    ],
    "source": [
-    "incorrect_idx = get_incorrect_idx(result_data5, test_data_annotations)\n",
+    "incorrect_idx = get_incorrect_idx(result_data7, test_data_annotations)\n",
     "print(incorrect_idx)\n",
-    "#failed_samples(incorrect_idx, result_data5)"
+    "#failed_samples(incorrect_idx, result_data7)"
    ]
   },
   {
