training without lora

--- a/experiments/exp10_result_analysis.ipynb
+++ b/experiments/exp10_result_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,6 +547,37 @@
    ],
    "source": [
     "web_access_file = \"../scripts/dj_temp.json\"\n",
+    "result_data7 = get_results(web_access_file)\n",
+    "print(len(result_data7))\n",
+    "#num_disagreements(result_data7)\n",
+    "precision, recall = get_precision_and_recall(result_data7, test_data_annotations)\n",
+    "print(\"Accuracy: {:.4f}\".format(get_accuracy(result_data7, test_data_annotations)))\n",
+    "print(\"Precision: {:.4f}\".format(precision))\n",
+    "print(\"Recall: {:.4f}\".format(recall))\n",
+    "print(\"Accuracy without unsures: {:.4f}\".format(get_acc_without_unsures(result_data7, test_data_annotations)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "70\n",
+      "Num unsures:  1\n",
+      "Num incorrects:  7\n",
+      "Accuracy: 0.9000\n",
+      "Precision: 0.8500\n",
+      "Recall: 0.9714\n",
+      "Accuracy without unsures: 0.9130\n"
+     ]
+    }
+   ],
+   "source": [
+    "web_access_file = \"../../datasets/results/gpt4o_debate.json\"\n",
     "result_data7 = get_results(web_access_file)\n",
     "print(len(result_data7))\n",
     "#num_disagreements(result_data7)\n",
