add and analyse solo llava results

--- a/baselines/baseline_result_analysis.ipynb
+++ b/baselines/baseline_result_analysis.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,6 +175,38 @@
     "print(\"Recall: {:.4f}\".format(recall))\n",
     "print(\"Accuracy: {:.4f}\".format(get_accuracy(result_data, test_data_annotations)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision: 0.9052\n",
+      "Recall: 0.3820\n",
+      "Accuracy: 0.6710\n"
+     ]
+    }
+   ],
+   "source": [
+    "#LLaVA\n",
+    "filename = \"../../datasets/results/baselines/llava.json\"\n",
+    "result_data = get_results(filename)\n",
+    "precision, recall = get_precision_and_recall(result_data, test_data_annotations)\n",
+    "print(\"Precision: {:.4f}\".format(precision))\n",
+    "print(\"Recall: {:.4f}\".format(recall))\n",
+    "print(\"Accuracy: {:.4f}\".format(get_accuracy(result_data, test_data_annotations)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
