update scripts for running gpt-4o experiments and back-up user study data

--- a/experiments/exp14_debating_llava_adv_2.ipynb
+++ b/experiments/exp14_debating_llava_adv_2.ipynb
@@ -31,7 +31,8 @@
     "from transformers import TextStreamer\n",
     "\n",
     "from utils.data import get_data, show_data\n",
-    "from utils.prompts import initial_prompt_with_context, round1_prompt, debate_prompt"
+    "from utils.prompts import initial_prompt_with_context, round1_prompt, debate_prompt\n",
+    "from utils.compile_results import add_result"
    ]
   },
   {
