--- a/experiments/exp25_sniffer_baseline.ipynb
+++ b/experiments/exp25_sniffer_baseline.ipynb
@@ -29725,13 +29725,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = \"Some rumormongers use images from other events as illustrations of current news event to make multimodal misinformation. Given a news caption and a news image, judge whether the given image is wrongly used in a different news context. Let's analyze their inconsistency from perspectives of main news elements, including time, place, person, event, artwork, etc. You should answer in the following forms: 'No, the image is rightly used.' or 'Yes, the image is wrongly used in a different news context. The given news caption and image are inconsistent in <element>. The <element> in caption is <entity_1>, and the <element> in image is <entity_2>. ' The news caption is '{caption}'. The possible visual entities is {','.join(entities_cut)}. The answer is\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "prompt = \"Does this caption match its image? OUTPUT A FINAL YES OR NO ANSWER. Caption: {}\".format(caption)\n",
     "image = vis_processors['eval'](image).unsqueeze(0).to('cpu')\n",
-    "prompt = txt_processors['eval'](prompt)\n"
+    "prompt = txt_processors['eval'](prompt)"
    ]
   },
   {
